Changed the dropdown z-index to 12 to prevent it from laying itself in the background on opencard

--- a/src/index.css
+++ b/src/index.css
@@ -568,7 +568,7 @@ i.chevron-down {
 }
 
 .dropdown {
-  z-index: 5;
+  z-index: 12;
   display: block;
   position: absolute;
   box-shadow:
